# imgui-enc

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake  README.md
3rd/: CMakeLists.txt
3rd/imgui/: CMakeLists.txt
3rd/imgui/implFix/: imgui_impl_sdl.cpp
app/: CMakeLists.txt
app/rc/: CMakeLists.txt
app/rc/rc/: icon.rc.in
app/rc/res/conf/: clipTool.ini
app/src/: entrance.cpp  entrance.h
app/src/base/: app.cpp  app.h  appWndEvent.cpp  cc.h  imguiMgr.cpp  imguiMgr.h  shortcut.cpp  shortcut.h  staticEvent.h  staticEventMgr.cpp  staticEventMgr.h  timeMgr.cpp  timeMgr.h  vulkanMgr.cpp  vulkanMgr.h
app/src/base/_/: __app_caller.hpp
app/src/core/: clipCtrl.cpp  clipCtrl.h  fileCtrl.cpp  fileCtrl.h  imgCtrl.cpp  imgCtrl.h  joinCtrl.cpp  joinCtrl.h  prstData.hpp
app/src/platform/: universal.cpp  univesal.h  win32.cpp
app/src/ui/: clipCtrlPanel.hpp  clipPicPanel.hpp  ctrlPanel.hpp  mainPanel.hpp  picPanel.hpp  staticPanelData.h
app/src/ui/base/: wndBase.hpp  wndMgr.cpp  wndMgr.h
app/src/ui/unit/: imgUnit.cpp  imgUnit.h  imgUnit.hpp
app/src/ui/util/: polyTest.hpp  rectTest.hpp
base/: CMakeLists.txt
base/include/: app.h  entrance.h  staticEvent.h  wndBase.hpp  wndMgr.h
base/src/core/: app.cpp  appWndEvent.cpp  staticEventMgr.cpp  wndMgr.cpp
base/src/core/_/: __app_caller.hpp
base/src/platform/: universal.cpp  univesal.h  win32.cpp
core/: CMakeLists.txt
core/include/: vulkanMgr.h  xdbase.h
core/include/xdBase/: app.h  entrance.h  imguiMgr.h  shortcut.h  staticEvent.h  staticEventMgr.h  timeMgr.h  vulkanMgr.h  wndBase.hpp  wndMgr.h
core/rc/: CMakeLists.txt
core/rc/rc/: icon.rc.in
core/rc/res/fonts/: 通用规范汉字表 UCC8105 [(1)0x00]
core/src/: app.cpp  appWndEvent.cpp  entrance.cpp  imguiMgr.cpp  p_app.h  p_imguiMgr.h  p_timeMgr.h  p_vulkanMgr.h  p_wndMgr.h  shortcut.cpp  staticEventMgr.cpp  timeMgr.cpp  vulkanMgr.cpp  wndMgr.cpp
core/src/_/: __app_caller.hpp
core/src/core/: entrance.cpp  imguiMgr.cpp  timeMgr.cpp
core/src/platform/: universal.cpp  univesal.h  win32.cpp
doc/: colorMap.txt
util/: CMakeLists.txt
util/include/: ccexce.h  uuidGen.h
util/src/: ccexce.cpp  uuidGen.cpp
